# photo-organizer

./: .gitignore  App.axaml  App.axaml.cs  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  Program.cs  README.md  ViewLocator.cs  app.manifest  build.ps1  build.sh  cmake_install.cmake  main  main.py  photo-organizer.csproj  photo-organizer.sln  requirements.txt
Models/: ProgressInfo.cs
Services/: FolderPickerService.cs  FolderService.cs  IFolderPicker.cs  IFolderService.cs  IPhotoOrganizerService.cs  PhotoOrganizerService.cs
ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
Views/: MainWindow.axaml  MainWindow.axaml.cs
gui/: FileInput.cpp  FileInput.hpp  MainWindow.cpp  MainWindow.hpp
src/: Main.cpp  Mover.cpp  Mover.hpp  __init__.py  main.cpp  mover.cpp  mover.hpp
test/: main_test.py
tests/: test.py
